--- a/Makefile.stim_timer_skel
+++ b/Makefile.stim_timer_skel
@@ -56,7 +56,7 @@ program: $(PRG).hex
 #	avrdude -p $(PROGRAMMER_TARGET) -c usbasp -e -U flash:w:$(PRG).hex \
                                                      -U eeprom:w:$(PRG)_eeprom.hex
 	avrdude -p $(PROGRAMMER_TARGET) -c osuisp2 -e -U flash:w:$(PRG).hex 
-	make clean 
+	make clean -f Makefile.stim_timer_skel 
 
 lst:  $(PRG).lst
 
